--- a/QuestionAndAnswer/QuestionAndAnswer/Base.lproj/Main.storyboard
+++ b/QuestionAndAnswer/QuestionAndAnswer/Base.lproj/Main.storyboard
@@ -12,13 +12,13 @@
         <!--Q&A-->
         <scene sceneID="wJ1-fS-bKk">
             <objects>
-                <tableViewController id="dGi-L0-0Ff" sceneMemberID="viewController">
+                <tableViewController id="dGi-L0-0Ff" customClass="QuestionTableViewController" customModule="QuestionAndAnswer" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="F2H-lj-TCa">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="90" id="wR5-jl-G4R">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="questionCell" rowHeight="90" id="wR5-jl-G4R" customClass="QuestionTableViewCell" customModule="QuestionAndAnswer" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="414" height="90"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="wR5-jl-G4R" id="nyl-ok-Lxk">
@@ -90,6 +90,11 @@
                                         <constraint firstAttribute="bottom" secondItem="Bio-nP-Bf4" secondAttribute="bottom" constant="8" id="izO-vA-qGW"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="askedByLabel" destination="OpU-B4-vZC" id="ZdS-06-opE"/>
+                                    <outlet property="label" destination="5hY-1S-B6T" id="uGh-PH-Cpd"/>
+                                    <outlet property="questionLabel" destination="lTT-Pl-bSu" id="ULs-hy-4i1"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
